--- a/style.css
+++ b/style.css
@@ -1,22 +1,53 @@
 body {
    background-color: darkgrey;   
-}
-h1{ color: aquamarine;  
+    }
+h1{ color: yellow;  
     text-align: center;
-    text-decoration-line: overline; 
+    text-decoration-line: line-through;
+    text-decoration-color: black;
     }
 a:link{ 
     color:aquamarine;
-}
+    }
 a:visited{
     color:orange;
-}
+    }
 a:hover{
     color:cadetblue;
-}
+    }
 a {
     text-decoration-color: black;
     text-decoration-line: line-through;
     text-align: center;
-    font-size: 16
+    font-size: 30pt;
+    }
+*{
+    margin: opx;
+    padding: 0px;
 }
+div.header{
+    width: 100%;   
+    background-color: navy;
+}
+div.right{
+    float: right;
+    width: 70%;
+    height: 500px;
+    background-color: aqua
+}
+div.left{
+    float: left;
+    width: 30%;
+    height: 500px;
+    background-color: chartreuse
+}
+div.footer{
+    display: inline-block;
+    width: 100%;
+    height: 100px;
+    background-color: blue
+    
+}
+
+
+
