--- a/style.css
+++ b/style.css
@@ -1,28 +1,34 @@
 body {
-   background-color: darkgrey;   
+   background-color: darkgray;   
     }
 h1{ color: yellow;  
     text-align: center;
-    text-decoration-line: line-through;
-    text-decoration-color: black;
+    text-decoration-line:line-through;
+    text-decoration-color: darkblue;
+    font-size: 60
     }
 a:link{ 
     color:aquamarine;
     }
 a:visited{
-    color:orange;
-    }
-a:hover{
     color:cadetblue;
     }
-a {
-    text-decoration-color: black;
-    text-decoration-line: line-through;
-    text-align: center;
-    font-size: 30pt;
+a:hover{
+    color:orange;
     }
+a {
+    text-decoration-color: chartreuse;
+    text-decoration-line: line-through;
+    font-size: 20pt;
+    font-family: cursive
+    }
+p{
+    text-decoration-line: underline;
+    font-family: sans-serif;
+    text-decoration-color: darkcyan;
+}
 *{
-    margin: opx;
+    margin: 0px;
     padding: 0px;
 }
 div.header{
@@ -47,6 +53,9 @@ div.footer{
     height: 100px;
     background-color: blue
     
+}
+p,a{
+    margin: 10px
 }
 
 
