--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@ body {
     }
 h1{ color: yellow;  
     text-align: center;
-    text-decoration-line:line-through;
-    text-decoration-color: darkblue;
-    font-size: 60
+    font-size: 60;
+    font-family: 'Rampart One', cursive;
     }
 a:link{ 
     color:aquamarine;
-    }
+}
 a:visited{
     color:cadetblue;
     }
@@ -20,11 +19,12 @@ a {
     text-decoration-color: chartreuse;
     text-decoration-line: line-through;
     font-size: 20pt;
-    font-family: cursive
+    font-family: 'Lobster', cursive;
+;
     }
 p{
     text-decoration-line: underline;
-    font-family: sans-serif;
+    font-family: 'Cormorant Garamond', serif;
     text-decoration-color: darkcyan;
 }
 *{
@@ -48,10 +48,11 @@ div.left{
     background-color: chartreuse
 }
 div.footer{
-    display: inline-block;
-    width: 100%;
-    height: 100px;
-    background-color: blue
+    float: left;
+    width:  30%;
+    height: 500px;
+    
+    
     
 }
 p,a{
